[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heartscan-ml"
version = "0.1.0"
description = "ECG training pipeline: PTB-XL, CNN1D, rhythm guardrails, optional paper synthesis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "wfdb>=4.1",
  "sleepecg>=0.5",
  "torch>=2.1",
  "torchmetrics>=1.3",
  "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.9"]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27"]
neurokit = ["neurokit2>=0.2.7"]

[project.scripts]
heartscan-train = "heartscan_ml.train:main"
heartscan-eval = "heartscan_ml.evaluate:main"
heartscan-infer = "heartscan_ml.inference:main"
heartscan-serve = "heartscan_ml.api:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["heartscan_ml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
